cambios texto Proxima Charla, Juanita Chávez

--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
 			<div class="charla-texto">
 				<h2>Próxima charla</h2>
 		  	<h3>Big Data para Noobs</h3>
-		  	<h4>Rafaela Valdéz</h4>
+		  	<h4>Juanita Chávez</h4>
 		  	<h5>Data scientis, phD Theoriccal Physics, Carneige Mellon University</h5>
-		  	<p>En esta charla revisaremos las técnicas y tecnologías que hacen que sea económico hacer frente a los datos de una escala extrema.</p>
+		  	<p>En esta charla revisaremos las técnicas y tecnologías que hacen que sea económico hacer frente a los datos de una escala extrema. Juanita Chávez es muy buena en lo que hace y le gustan las margaritas</p>
 			</div>
 		</div>
 	</section>
